[package]
name = "installer"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["full"] }
reqwest = "0.11.10"
sysinfo = "0.23.13"
console = "0.15.0"
regex = "1.5.6"
zip = "0.6.2"